# portfolio

./: .gitignore  pyproject.toml
main/: admin.py  models.py  views.py
main/migrations/: 0001_initial.py  0002_rename_recomendations_recomendation_photo.py  0003_recomendation_resume.py  0004_visitor.py  0005_biographychapter.py  0006_person_nickname.py  0007_person_telegram_id_alter_person_nickname.py  0008_project_alter_biographychapter_photo_and_more.py  0009_alter_person_nickname_and_more.py  0010_alter_person_nickname_alter_project_develop_stack.py  0011_project_finished_project_will_show_and_more.py  0012_alter_person_nickname.py  0013_softskill_description_softskill_person_and_more.py  0014_highereducation_department_alter_person_nickname.py  0015_alter_highereducation_finished_at_and_more.py  0016_resume_places_of_work_alter_person_nickname.py  0017_placeofwork_summary_alter_person_nickname_and_more.py  0018_resume_about_candidate_alter_person_nickname.py  0019_alter_person_nickname_alter_resume_about_candidate.py  0020_alter_person_nickname_alter_resume_about_candidate.py  0021_alter_person_nickname_alter_placeofwork_company_and_more.py  0022_recommendation_alter_person_nickname_and_more.py  0023_resume_advantages_resume_expectations_and_more.py  0024_alter_person_nickname_achievement.py  0025_alter_biographychapter_title_alter_person_nickname.py  0026_alter_biographychapter_photo_alter_person_nickname.py  (+1 more)
main/templates/: biography.html  (+4 more)
portfolio/: settings.py  urls.py
static/: Style.css
telegram_bot/: main.py  messages.py
templates/: base.html
(+1 files in other folders)
